--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curriculum Facundo</title>
     <link rel="stylesheet"  href="Estilos/estilos.css">
 </head>
 <body>
@@ -45,7 +45,5 @@
             <p>Derechos Reservados-2023</p>
 
     </footer>
-
-
 </body>
 </html>
